cluster/keycloak/app-keycloak.yaml
# Based on https://raw.githubusercontent.com/keycloak/keycloak-quickstarts/refs/heads/main/kubernetes/keycloak.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - secretName: keycloak-certs
    hosts:
    - keycloak.kotimme.cc
  rules:
  - host: keycloak.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: keycloak
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  serviceName: "keycloak"
  template:
    metadata:
      labels:
        app: keycloak
    spec:
#      securityContext:
#        fsGroup: 1978
#      imagePullSecrets:
#        - name: docker-hub
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.1.4
        imagePullPolicy: IfNotPresent
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
